# Axon

./: .claudeignore  .gitignore  Axon_Architecture_and_API_Docs.md  Axon_Technical_Docs(API, Endpoints).md  CLAUDE.md  Cargo.toml  MCP_SETUP.md  README.md  SECURITY.md  electron-builder.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.electron.ts  vite.config.ts
.config/: db.sqlite  db.sqlite-shm  db.sqlite-wal  dive_httpd.json  model_config.json  model_settings.json  oap_config.json  plugin_config.json
cdp-test/: README.md  activate-audio.mjs  cdp-inspect.mjs  check-errors.mjs  check-html.mjs  check-messages.mjs  check-react-state.mjs  check-tool-name.mjs  debug-and-setup.mjs  debug-audio.mjs  debug-watcher.mjs  enable-audio-test.mjs  find-and-play.mjs  monitor-and-play.mjs  navigate-and-test.mjs  send-message.mjs  (+3 more)
mcp-host/: .gitignore  mcp_config.json  model_config.json  plugin_config.json  pyproject.toml
mcp-host/.github/workflows/: ci.yml
mcp-host/dive_mcp_host/cli/: README.md  cli.py  cli_types.py
mcp-host/dive_mcp_host/host/: chat.py  custom_events.py  errors.py  host.py
mcp-host/dive_mcp_host/host/agents/: agent_factory.py  chat_agent.py  file_in_additional_kwargs.py  message_order.py  tools_in_prompt.py
mcp-host/dive_mcp_host/host/conf/: __init__.py  llm.py
mcp-host/dive_mcp_host/host/helpers/: checkpointer.py  context.py  filter.py
mcp-host/dive_mcp_host/host/store/: base.py
mcp-host/dive_mcp_host/host/tools/: __init__.py  echo.py  elicitation_manager.py  local_http_server.py  log.py  mcp_server.py  model_types.py  oauth.py  plugin.py  server_session_store.py
mcp-host/dive_mcp_host/host/tools/hack/: __init__.py  client_session.py  httpx_wrapper.py  oauth2.py  stdio_server.py
mcp-host/dive_mcp_host/httpd/: _main.py  abort_controller.py  app.py  server.py
mcp-host/dive_mcp_host/httpd/conf/: arguments.py  command_alias.py  httpd_service.py  mcp_servers.py  misc.py  models.py  prompt.py  system_prompt.py
mcp-host/dive_mcp_host/httpd/database/: models.py  orm_models.py
mcp-host/dive_mcp_host/httpd/database/migrations/versions/: 202508191458_edit_and_star_chat.py  202509041603_add_oauth.py  20251118155213_add_user_token_and_performance_metrics.py  20251209120000_add_prompt_token_fields.py  202601061651_add_oauth_metadata.py  202601071156_add_token_expiry_time.py
mcp-host/dive_mcp_host/httpd/database/msg_store/: abstract.py  base.py  postgresql.py  sqlite.py
mcp-host/dive_mcp_host/httpd/database/oauth_store/: base.py
mcp-host/dive_mcp_host/httpd/middlewares/: plugins.py
mcp-host/dive_mcp_host/httpd/routers/: chat.py  config.py  model_verify.py  models.py  plugins.py  tools.py  utils.py
mcp-host/dive_mcp_host/httpd/store/: __init__.py  cache.py  local.py  manager.py
mcp-host/dive_mcp_host/httpd/templates/: oauth_callback.html
mcp-host/dive_mcp_host/mcp_installer_plugin/: __init__.py  config.py  events.py  prompt.py  runtime.py
mcp-host/dive_mcp_host/mcp_installer_plugin/tools/: __init__.py  bash.py  common.py  confirmation.py  fetch.py  file_ops.py  mcp_server.py  patterns.py
mcp-host/dive_mcp_host/models/: __init__.py  fake.py  helpers.py
mcp-host/dive_mcp_host/oap_plugin/: __init__.py  config_mcp_servers.py  http_handlers.py  models.py  store.py
mcp-host/dive_mcp_host/plugins/: __init__.py  error.py  registry.py
mcp-host/tests/: conftest.py  test_base_message_store_postgresql.py  test_base_message_store_sqlite.py  test_chat_agent.py  test_db_migration.py  test_get_checkpointer.py  test_host.py  test_httpx_wrapper.py  test_installer.py  test_log.py  test_message_order.py  test_models.py  test_providers.py  test_tools.py
mcp-host/tests/httpd/: test_chat_processor.py  test_data_models.py  test_mcpserver_manager.py  test_mcpserver_manager_hooks.py  test_model_manager.py  test_oauth_store.py  test_plugin.py  test_service_manager.py
mcp-host/tests/httpd/routers/: conftest.py  test_chat.py  test_config.py  test_model_verify.py  test_model_verify_disable_streaming.py  test_tools.py
mcp-host/tests/mcp_servers/: weather.py
mcp-host/tests/oap_plugin/: test_oap_plugin.py
mcp-host/tests/plugin/: test_registry.py
mcp-host/tests/servers/: __init__.py  echo_httpd.py
src/: App.tsx  (+5 more)
(+274 files in other folders)
