[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dive-mcp-host"
version = "0.8.0"
description = "A MCP host for Dive"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Alex Fang", email = "alex@funmula.com" },
    { name = "Benny Ling", email = "benny@funmula.com" },
    { name = "Louis Liu", email = "louis@funmula.com" }
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "fastapi>=0.116.1",
    "dive-mcp-sdk>=1.0.2",
    "anyio>=4.10.0",
    "pydantic>=2.11.7",
    "pywin32>=310; sys_platform == 'win32' or platform_system == 'Windows'",
    "sqlite-vec>=0.1.6",
    "psycopg[binary]>=3.2.9",
    "alembic>=1.15.2,< 1.16", # Alembic doesn't use SemVer https://alembic.sqlalchemy.org/en/latest/front.html#versioning-scheme
    "sqlalchemy[asyncio]>=2.0.42",
    "psycopg2-binary>=2.9.10",
    "asyncpg>=0.30.0",
    "aiosqlite<0.22.0",
    "python-multipart>=0.0.20",
    "pillow>=11.3.0",
    "websockets >= 15.0.1",
    "python-dotenv>=1.0.1",
    "langchain-anthropic>=1.2.0",
    "langchain-aws>=1.1.0",
    "langchain-deepseek>=1.0.1",
    "langchain-mistralai>=1.1.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.1",
    "langgraph-checkpoint-postgres>=3.0.2",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "langgraph-prebuilt>=1.0.5",
    "httpx[brotli,http2,socks,zstd]>=0.28.1",
    "langchain>=1.2.1",
    "langchain-core>=1.2.4",
    "langchain-google-genai>=4.1.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
clipboard = []
dev = [
    "pproxy",
    "pytest",
    "pytest-asyncio",
    "pytest-integration",
    "pytest-subtests",
    "pytest-timeout",
    "langchain-community",
    "ruff",
    "uvicorn",
]

[project.urls]
Homepage = "https://github.com/OpenAgentPlatform/dive-mcp-py"

[project.scripts]
dive_httpd = "dive_mcp_host.httpd._main:main"
dive_cli = "dive_mcp_host.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = ["integration: mark test as integration test"]
timeout = 60
filterwarnings = [
    'ignore:Accessing this attribute on the instance',
    'ignore:fields may not start with an underscore',
]

[tool.ruff]
target-version = "py312"
line-length = 88
lint.select = [
    "E",
    "F",
    "B",
    "I",
    "W",
    "C90",
    "N",
    "D",
    "UP",
    "ANN",
    "S",
    "BLE",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "NPY",
    "RUF",
]
lint.ignore = [
    "ANN401",
    "D100",
    "D104",
    "D105",
    "EM",
    "ERA001",
    "COM812",
    "B008",   # For FastAPI 'Depends' usage
    "S101",   # Need assert statements for unknown values
    "PLC0415",
    "PGH003",
    "TC006", # forces use of string type for 'cast' ex: cast("dict[str, Any]", response.json())
    "C901",
    "PLR0915",
    "PLR0912",
    "PLR0913",
]
# Follow Google Style Guide
lint.extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["S101", "ANN", "D107", "ARG001", "PLR2004", "SLF001", "PT012", "RUF059"]
"dive_mcp_host/cli/**/*.py" = ["S101", "ANN", "D107", "T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google" # Use Google-style docstrings

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ["dive_mcp_host"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88
